--- a/package.json
+++ b/package.json
@@ -2,12 +2,21 @@
   "name": "react-user-authentication",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/page-source/react-user-authentication.git"
+  },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.0",
     "express": "^4.15.4",
     "foreman": "^2.0.0",
+    "jsonwebtoken": "^8.0.1",
     "material-ui": "^1.0.0-beta.8",
+    "mongoose": "^4.11.11",
     "nodemon": "^1.12.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.2.0",
@@ -23,5 +32,5 @@
     "eject": "react-scripts eject",
     "start-dev": "nf start -p 3000"
   },
-  "proxy": "http://localhost:3001"
+  "proxy":"http://localhost:3001"
 }
