--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "git",
     "url": "https://github.com/page-source/react-user-authentication.git"
   },
+  "homepage": "https://react-user-authentication.herokuapp.com/",
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.0",
@@ -30,7 +31,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "start-dev": "nf start -p 3000"
+    "start-dev": "nf start -p 3000",
+    "deploy": "npm run build&&gh-pages -d build"
   },
-  "proxy":"http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
+  }
 }
