--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "type": "git",
     "url": "https://github.com/page-source/react-user-authentication.git"
   },
+  "engines":{
+    "node" : "6.11.x"
+  },
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.0",
@@ -31,7 +34,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "start-dev": "nf start -p 3000",
-    "deploy": "npm run build&&gh-pages -d build"
+    "deploy": "npm run build"
   },
   "proxy": "http://localhost:3001",
   "devDependencies": {
