--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "validator": "^8.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node index.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "start-dev": "nf start -p 3000",
     "deploy": "npm run build"
   },
+  "proxy": "http://localhost:3001",
   "devDependencies": {
     "gh-pages": "^1.0.0"
   }
