--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "validator": "^8.2.0"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "react-scripts start",
+    "heroku-postbuild": "npm install && npm run build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
