--- a/package.json
+++ b/package.json
@@ -30,14 +30,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "heroku-postbuild": "npm install && npm run build",
+    "heroku-postbuild": "npm install && npm run build && npm start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "start-dev": "nf start -p 3000",
     "deploy": "npm run build"
   },
-  "proxy": "http://localhost:3001",
   "devDependencies": {
     "gh-pages": "^1.0.0"
   }
